--- a/src/main/resources/fxml/OpenRecent/OpenRecentUI.fxml
+++ b/src/main/resources/fxml/OpenRecent/OpenRecentUI.fxml
@@ -13,86 +13,95 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<SplitPane dividerPositions="0.6" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.doanjava2.OpenController">
+<SplitPane dividerPositions="0.6" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+           prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="main.doanjava2.OpenController">
     <items>
         <AnchorPane minHeight="0.0" minWidth="0.0">
             <children>
-                <VBox layoutX="42.0" layoutY="-42.0" spacing="5.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                <VBox layoutX="42.0" layoutY="-42.0" spacing="5.0" AnchorPane.bottomAnchor="10.0"
+                      AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                     <children>
-                        <Label text="Ease graphing calculator" />
-                        <Label text="Open recent" />
-                  <HBox>
-                     <children>
-                                <TextField fx:id="searchTextField" prefWidth="250.0" />
-                                <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
-                     </children>
-                  </HBox>
-                  <ScrollPane fitToWidth="true" VBox.vgrow="ALWAYS">
-                     <content>
-                        <Accordion>
-                          <panes>
-                            <TitledPane fx:id="titledPanePinned" text="Pinned">
-                                 <content>
-                                    <VBox fx:id="pinnedContainer" minHeight="10.0" spacing="10.0">
-                                       <padding>
-                                          <Insets top="10.0" />
-                                       </padding>
-                                    </VBox>
-                                 </content>
-                            </TitledPane>
-                            <TitledPane fx:id="titledPaneOther" animated="false" text="Others">
-                                 <content>
-                                    <VBox fx:id="otherContainer" minHeight="10.0" spacing="10.0">
-                                       <padding>
-                                          <Insets top="10.0" />
-                                       </padding>
-                                    </VBox>
-                                 </content>
-                            </TitledPane>
-                          </panes>
-                        </Accordion>
-                     </content>
-                  </ScrollPane>
+                        <Label text="Ease graphing calculator"/>
+                        <Label text="Open recent"/>
+                        <HBox>
+                            <children>
+                                <TextField fx:id="searchTextField" prefWidth="250.0"/>
+                                <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true"/>
+                            </children>
+                        </HBox>
+                        <ScrollPane fitToWidth="true" VBox.vgrow="ALWAYS">
+                            <content>
+                                <Accordion>
+                                    <panes>
+                                        <TitledPane fx:id="titledPanePinned" text="Pinned">
+                                            <content>
+                                                <VBox fx:id="pinnedContainer" minHeight="10.0" spacing="10.0">
+                                                    <padding>
+                                                        <Insets top="10.0"/>
+                                                    </padding>
+                                                </VBox>
+                                            </content>
+                                        </TitledPane>
+                                        <TitledPane fx:id="titledPaneOther" animated="false" text="Others">
+                                            <content>
+                                                <VBox fx:id="otherContainer" minHeight="10.0" spacing="10.0">
+                                                    <padding>
+                                                        <Insets top="10.0"/>
+                                                    </padding>
+                                                </VBox>
+                                            </content>
+                                        </TitledPane>
+                                    </panes>
+                                </Accordion>
+                            </content>
+                        </ScrollPane>
                     </children>
                 </VBox>
             </children>
         </AnchorPane>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
             <children>
-                <VBox layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="30.0">
+                <VBox layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0"
+                      AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+                      AnchorPane.topAnchor="30.0">
                     <children>
-                        <Label text="Get started" />
-                        <AnchorPane />
-                        <AnchorPane />
-                        <HBox fx:id="createNewButton" alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #999999;">
+                        <Label text="Get started"/>
+                        <AnchorPane/>
+                        <AnchorPane/>
+                        <HBox fx:id="createNewButton" alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="200.0"
+                              style="-fx-background-color: #999999;">
                             <children>
-                                <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"/>
                                 <VBox alignment="CENTER_LEFT">
                                     <children>
-                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Create new" />
-                                        <Text fill="#c4c4c4" strokeType="OUTSIDE" strokeWidth="0.0" text="Create new, empty graph file" />
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Create new"/>
+                                        <Text fill="#c4c4c4" strokeType="OUTSIDE" strokeWidth="0.0"
+                                              text="Create new, empty graph file"/>
                                     </children>
                                 </VBox>
                             </children>
                             <VBox.margin>
-                                <Insets />
+                                <Insets/>
                             </VBox.margin>
                             <padding>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                             </padding>
                         </HBox>
-                        <HBox fx:id="openFromFileSystemButton" alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: #999999;">
+                        <HBox fx:id="openFromFileSystemButton" alignment="CENTER_LEFT" prefHeight="70.0"
+                              prefWidth="200.0" style="-fx-background-color: #999999;">
                             <children>
-                                <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"/>
                                 <VBox alignment="CENTER_LEFT">
                                     <children>
-                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Open from file system" />
-                                        <Text fill="#c4c4c4" strokeType="OUTSIDE" strokeWidth="0.0" text="Browse file to open" />
+                                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Open from file system"/>
+                                        <Text fill="#c4c4c4" strokeType="OUTSIDE" strokeWidth="0.0"
+                                              text="Browse file to open"/>
                                     </children>
                                 </VBox>
                             </children>
                             <padding>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                             </padding>
                         </HBox>
                     </children>
