--- a/src/main/resources/css/DarkTheme/GraphCanvas/radio_button.css
+++ b/src/main/resources/css/DarkTheme/GraphCanvas/radio_button.css
@@ -1,15 +1,17 @@
 .radio-button .radio {
     -fx-border-width: 2px;
-    -fx-background-color: white;
-    -fx-border-color: grey;
-    -fx-background-image: null;
+    -fx-background-color: #333333; /* Màu nền tối */
+    -fx-border-color: #555555; /* Màu viền */
     -fx-border-radius: 15px;
     -fx-padding: 0px;
+      -fx-text-fill: #FFFFFF; /* Màu chữ trắng */
 }
+
 .radio-button:selected .radio .dot {
-    -fx-background-color: #28a3f4;
+    -fx-background-color: #1E88E5; /* Màu nền xanh đậm */
     -fx-background-insets: 0;
 }
+
 .radio-button .dot {
     -fx-background-radius: 15px;
     -fx-padding: 8px;
