--- a/src/main/resources/fxml/GraphList/GraphListUI.fxml
+++ b/src/main/resources/fxml/GraphList/GraphListUI.fxml
@@ -10,42 +10,47 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root fx:id="graphListPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" stylesheets="@../../css/GraphList/GraphList.css" type="GridPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="graphListPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
+         minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" stylesheets="@../../css/LightTheme/GraphList/GraphList.css"
+         type="GridPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="250.0" />
-        <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" />
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="250.0"/>
+        <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity"/>
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS"/>
     </rowConstraints>
     <children>
         <VBox prefHeight="200.0" prefWidth="100.0">
             <children>
-                <VBox fx:id="graphListBox" spacing="7.0" />
-            <Button fx:id="addNewBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#requestAddingGraphData" styleClass="add-button">
-               <graphic>
-                  <ImageView fitHeight="24.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/plus.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <VBox.margin>
-                  <Insets top="7.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="10.0" top="10.0" />
-               </padding>
-            </Button>
+                <VBox fx:id="graphListBox" spacing="7.0"/>
+                <Button fx:id="addNewBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                        onAction="#requestAddingGraphData" styleClass="add-button">
+                    <graphic>
+                        <ImageView fitHeight="24.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../images/plus.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <VBox.margin>
+                        <Insets top="7.0"/>
+                    </VBox.margin>
+                    <padding>
+                        <Insets bottom="10.0" top="10.0"/>
+                    </padding>
+                </Button>
             </children>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            </padding>
         </VBox>
-      <Button fx:id="openButton" maxHeight="1000.0" maxWidth="20.0" minWidth="20.0" mnemonicParsing="false" styleClass="detail-button" GridPane.columnIndex="1">
-         <graphic>
-            <Pane maxHeight="200.0" maxWidth="5.0" minHeight="200.0" minWidth="5.0" prefHeight="40.0" prefWidth="5.0" styleClass="detail-surface" />
-         </graphic>
-      </Button>
+        <Button fx:id="openButton" maxHeight="1000.0" maxWidth="20.0" minWidth="20.0" mnemonicParsing="false"
+                styleClass="detail-button" GridPane.columnIndex="1">
+            <graphic>
+                <Pane maxHeight="200.0" maxWidth="5.0" minHeight="200.0" minWidth="5.0" prefHeight="40.0"
+                      prefWidth="5.0" styleClass="detail-surface"/>
+            </graphic>
+        </Button>
     </children>
 </fx:root>
