--- a/src/main/resources/fxml/TopNavBar/TopNavBarUI.fxml
+++ b/src/main/resources/fxml/TopNavBar/TopNavBarUI.fxml
@@ -11,16 +11,19 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<fx:root id="root" minHeight="50.0" minWidth="600.0" styleClass="background" stylesheets="@../../css/TopNavBar/TopNavBar.css" type="BorderPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-	<center>
-        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="5" BorderPane.alignment="CENTER">
+<fx:root id="root" minHeight="50.0" minWidth="600.0" styleClass="background" type="BorderPane"
+         xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+    <center>
+        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="5"
+              BorderPane.alignment="CENTER">
             <children>
                 <ImageView fx:id="logoImage" fitHeight="48.0" fitWidth="48.0" preserveRatio="true">
                     <image>
-                        <Image url="@../../images/Logo.png" />
-                    </image></ImageView>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="product-name" text="Nhóm 27 - SE330.O21" />
-                <Label />
+                        <Image url="@../../images/Logo.png"/>
+                    </image>
+                </ImageView>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="product-name" text="Nhóm 27 - SE330.O21"/>
+                <Label/>
             </children>
         </HBox>
     </center>
@@ -31,68 +34,69 @@
                     <graphic>
                     </graphic>
                     <styleClass>
-                        <String fx:value="icon-button" />
+                        <String fx:value="icon-button"/>
                     </styleClass>
-               <graphic>
-                  <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/menu.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
+                    <graphic>
+                        <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../images/menu.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <HBox.margin>
+                        <Insets/>
+                    </HBox.margin>
                 </Button>
-                <Text fx:id="fileNameText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="file-name" text="Untitled Graph">
+                <Text fx:id="fileNameText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="file-name"
+                      text="Untitled Graph">
                     <font>
-                        <Font name="Arial" size="24.0" />
+                        <Font name="Arial" size="24.0"/>
                     </font>
                 </Text>
             </children>
-         <padding>
-            <Insets left="10.0" />
-         </padding>
+            <padding>
+                <Insets left="10.0"/>
+            </padding>
         </HBox>
     </left>
-   <right>
-      <HBox alignment="CENTER_RIGHT" spacing="5.0" BorderPane.alignment="CENTER">
-         <padding>
-            <Insets right="10.0" />
-         </padding>
-         <children>
-             <Button fx:id="openLanguageButton" mnemonicParsing="false">
-                 <graphic>
-                 </graphic>
-                 <styleClass>
-                     <String fx:value="icon-button" />
-                 </styleClass>
-               <graphic>
-                  <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/question.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-             </Button>
-             <Button fx:id="openCoopButton" mnemonicParsing="false">
-                 <graphic>
-                 </graphic>
-                 <styleClass>
-                     <String fx:value="icon-button" />
-                 </styleClass>
-               <graphic>
-                  <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../images/code.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-             </Button>
-         </children>
-      </HBox>
-   </right>
+    <right>
+        <HBox alignment="CENTER_RIGHT" spacing="5.0" BorderPane.alignment="CENTER">
+            <padding>
+                <Insets right="10.0"/>
+            </padding>
+            <children>
+                <Button fx:id="openLanguageButton" mnemonicParsing="false">
+                    <graphic>
+                    </graphic>
+                    <styleClass>
+                        <String fx:value="icon-button"/>
+                    </styleClass>
+                    <graphic>
+                        <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../images/question.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+                <Button fx:id="openCoopButton" mnemonicParsing="false">
+                    <graphic>
+                    </graphic>
+                    <styleClass>
+                        <String fx:value="icon-button"/>
+                    </styleClass>
+                    <graphic>
+                        <ImageView fitHeight="28.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../images/code.png"/>
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+            </children>
+        </HBox>
+    </right>
     <padding>
-        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
     </padding>
 </fx:root>
