--- a/src/main/resources/css/DarkTheme/FilePanel/FilePanelUI.css
+++ b/src/main/resources/css/DarkTheme/FilePanel/FilePanelUI.css
@@ -1,21 +1,19 @@
 .background {
-    -fx-background-color: #333333; /* Màu nền tối */
-    -fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.5), 10, 0, 0, 10); /* Đổ bóng */
+    -fx-background-color: #333333;
+    -fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.5), 10, 0, 0, 10);
 }
 
 .button {
-    /* Normal state */
     -fx-background-color: transparent;
-    -fx-text-fill: #FFFFFF; /* Màu chữ trắng */
+    -fx-text-fill: lightgray;
     -fx-font-size: 16px;
 }
 
 .button:hover {
-    /* Hover state */
-    -fx-background-color: #555555; /* Màu nền tối khi di chuột qua */
+    -fx-background-color: #555555;
 }
 
 .button:pressed {
-    /* Clicked state */
-    -fx-background-color: #777777; /* Màu nền tối khi được nhấn */
+
+    -fx-background-color: #777777;
 }
