--- a/src/main/resources/css/DarkTheme/GraphCanvas/check_box.css
+++ b/src/main/resources/css/DarkTheme/GraphCanvas/check_box.css
@@ -1,14 +1,14 @@
 .check-box .box {
-    -fx-background-color: #333333; /* Màu nền tối */
-    -fx-border-color: #555555; /* Màu viền */
+    -fx-background-color: #333333;
+    -fx-border-color: #555555;
     -fx-border-radius: 3px;
-     -fx-text-fill: #FFFFFF; /* Màu chữ trắng */
+    -fx-text-fill: lightgray;
 }
 
 .check-box:selected .mark {
-    -fx-background-color: #FFFFFF; /* Màu chữ trắng */
+    -fx-background-color: #FFFFFF;
 }
 
 .check-box:selected .box {
-    -fx-background-color: #1E88E5; /* Màu nền xanh đậm */
+    -fx-background-color: #1E88E5;
 }
