--- a/src/main/resources/css/DarkTheme/GraphCanvas/configButton.css
+++ b/src/main/resources/css/DarkTheme/GraphCanvas/configButton.css
@@ -1,15 +1,15 @@
 .button {
-    -fx-background-color: #333333; /* Màu nền tối */
-    -fx-border-color: #555555; /* Màu viền */
+    -fx-background-color: #333333;
+    -fx-border-color: #555555;
     -fx-border-width: 0.75;
     -fx-border-radius: 10;
-    -fx-text-fill: #FFFFFF; /* Màu chữ trắng */
+    -fx-text-fill: lightgray;
 }
 
 .button:hover {
-    -fx-background-color: #555555; /* Màu nền tối khi di chuột qua */
+    -fx-background-color: #555555;
 }
 
 .button:pressed {
-    -fx-background-color: #777777; /* Màu nền tối khi được nhấn */
+    -fx-background-color: #777777;
 }
