--- a/src/main/resources/css/DarkTheme/GraphCanvas/tab_pane.css
+++ b/src/main/resources/css/DarkTheme/GraphCanvas/tab_pane.css
@@ -7,8 +7,8 @@
     -fx-tab-min-height: 25px;
     -fx-tab-max-height: 25px;
 
-    -fx-background-color: #333333; /* Màu nền tối */
-    -fx-border-color: #555555; /* Màu viền */
+    -fx-background-color: #333333;
+    -fx-border-color: #555555;
     -fx-border-width: 1.5;
     -fx-shape: "M5,0 A 10,10 90 0 0 0,5 L0,235 A 10,10 90 0 0 5,240 L235,240 A 10,10 90 0 0 240,235 L240,45 L255,30 L240,15 L240,5 A 10,10 90 0 0 235,0 L5,0 Z";
 
@@ -16,13 +16,13 @@
 
 .tab-pane .tab {
     -fx-focus-color: transparent;
-    -fx-background-color: #333333; /* Màu nền tối */
+    -fx-background-color: #333333;
     -fx-background-radius: 3;
     -fx-background-insets: 3;
 }
 
 .tab-pane .tab:selected {
-    -fx-background-color: #1E88E5; /* Màu nền xanh đậm */
+    -fx-background-color: #1E88E5;
 }
 
 .tab-pane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
@@ -37,12 +37,12 @@
 
 .tab .tab-label {
     -fx-alignment: CENTER;
-    -fx-text-fill: #FFFFFF; /* Màu chữ trắng */
+    -fx-text-fill: lightgray;
     -fx-font-size: 16px;
     -fx-font-family: "Arial";
     -fx-font-weight: 700;
 }
 
 .tab:selected .tab-label {
-    -fx-text-fill: #FFFFFF; /* Màu chữ trắng */
+    -fx-text-fill: lightgray;
 }
