--- a/src/main/resources/css/DarkTheme/InputKeyboard/background.css
+++ b/src/main/resources/css/DarkTheme/InputKeyboard/background.css
@@ -1,4 +1,4 @@
 .input-keyboard-panel {
-    -fx-background-color: #2B2B2B; /* Màu nền tối */
-    -fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.1), 10, 0, 0, -1); /* Hiệu ứng bóng */
+    -fx-background-color: #2B2B2B;
+    -fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.1), 10, 0, 0, -1);
 }
